--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-<body>
 
-<canvas id="myCanvas" width="1600" height="1000" style="border:1px solid #000000;">
-Your browser does not support the HTML canvas tag.
-</canvas>
-<script src="draw.js"></script>
+<body>
+    <h1>Generative Art</h1>
+    <ul>
+        <li><a href="sunset/">Sunset</a></li>
+        <li><a href="pulleys/">Pulleys</a></li>
+    </ul>
 </body>
+
 </html>
