--- a/pulleys/index.html
+++ b/pulleys/index.html
@@ -8,6 +8,8 @@
     </canvas>
     <!-- <script type="module" src="convexHull.js"></script> -->
     <script type="module" src="draw.js"></script>
+    <a href="/pulleys">Reset</a>
+    <a id="share" href="/pulleys/">Share Link</a>
 </body>
 
 </html>
